change the date on services to a slightly darker gray to avoid accessibility contrast errors in wave

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -531,7 +531,7 @@ ul.scholarly-creative, ul.awards, ul.grants, ul.activity-list {
         line-height: 1; //to line up with the circle things
       }
       .period {
-        color: gray;
+        color: #767676;
       }
     }
     .view-all {
